--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@
 buildscript {
     ext.kotlin_version = "1.5.30"
     ext.hilt_version = "2.38"
+    ext.paging_version = "3.1.0"
+
     repositories {
         google()
         jcenter()
