--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -29,6 +29,13 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
           restore-keys: |
             ${{ runner.os }}-gradle-
+
+      - name: Touch local properties
+        run: touch local.properties
+
+      - name: Add EC2 url
+        run: echo "ec2.url=\"\"" >> local.properties
+
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
