[feat] S3에 아이템 이미지 업로드 구현

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,6 +85,11 @@ dependencies {
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
     implementation "androidx.hilt:hilt-navigation-fragment:1.0.0"
 
+    // AWS S3
+    implementation 'com.amplifyframework:aws-storage-s3:1.31.1'
+    implementation 'com.amplifyframework:aws-auth-cognito:1.31.1'
+    implementation 'com.amplifyframework:core-kotlin:0.15.1'
+
     // Paging
     implementation "androidx.paging:paging-runtime-ktx:$paging_version"
     testImplementation "androidx.paging:paging-common-ktx:$paging_version"
