[feat] FCM 알림 설정 구현

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,8 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'dagger.hilt.android.plugin'
 apply plugin: 'kotlin-parcelize'
+apply plugin: 'com.google.gms.google-services'
+
 Properties properties = new Properties()
 properties.load(project.rootProject.file('local.properties').newDataInputStream())
 
@@ -89,6 +91,11 @@ dependencies {
     implementation 'com.amplifyframework:aws-storage-s3:1.31.1'
     implementation 'com.amplifyframework:aws-auth-cognito:1.31.1'
     implementation 'com.amplifyframework:core-kotlin:0.15.1'
+
+    // Firebase FCM
+    implementation 'com.google.firebase:firebase-messaging-ktx'
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation platform('com.google.firebase:firebase-bom:29.0.4')
 
     // Paging
     implementation "androidx.paging:paging-runtime-ktx:$paging_version"
