--- a/.gitignore
+++ b/.gitignore
@@ -14,16 +14,7 @@
 .cxx
 
 #amplify-do-not-edit-begin
-amplify/\#current-cloud-backend
-amplify/.config/local-*
-amplify/logs
-amplify/mock-data
-amplify/backend/amplify-meta.json
-amplify/backend/backend-config.json
-amplify/backend/types/amplify-dependent-resources-ref.d.ts
-amplify/backend/.temp
-amplify/backend/auth/wishboardandroida3b3d941/cli-inputs.json
-amplify/team-provider-info.json
+amplify/
 build/
 dist/
 node_modules/
