--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -14,11 +14,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-
-      - name: Set Up JDK 1.8
-        uses: actions/setup-java@v1
+      - name: set up JDK 11
+        uses: actions/setup-java@v2
         with:
-          java-version: 1.8
+          java-version: '11'
+          distribution: 'adopt'
           
       - name: Cache Gradle packages
         uses: actions/cache@v2
