--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,9 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <activity android:name=".view.sign.screens.SignActivity" />
-        <activity android:name=".SplashActivity">
+        <activity
+            android:name=".SplashActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -30,6 +32,7 @@
         <activity android:name=".MainActivity" />
         <activity
             android:name=".view.wish.item.screens.WishLinkSharingActivity"
+            android:exported="true"
             android:theme="@style/AppThemePopup">
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
