--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -30,13 +30,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
 
-      - name: Decrypt Services
+      - name: Decode google-services.json
         env:
           FIREBASE_SECRET: ${{ secrets.FIREBASE_SECRET }}
-        run: gpg --quiet --batch --yes --always-trust --decrypt --passphrase="$FIREBASE_SECRET" --output services.tar services.tar.gpg
-
-      - name: Unzip Services
-        run: tar xvf services.tar
+        run: echo $FIREBASE_SECRET > app/google-services.json
       
       - name: Touch local properties
         run: touch local.properties
