[feat] 파이어베이스 동적링크 수신 구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
+
+        <activity android:name=".MainActivity"
+            android:exported="true">
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+                <data
+                    android:host="wishboard.com"
+                    android:scheme="https"
+                    android:path="/main" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".view.wish.item.screens.WishLinkSharingActivity"
             android:exported="true"
