--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".view.sign.screens.SignActivity" />
+        <activity
+            android:name=".view.sign.screens.SignActivity"
+            android:windowSoftInputMode="stateAlwaysVisible" />
         <activity
             android:name=".SplashActivity"
             android:exported="true">
