[feat] 키보드 위로 버튼 올리기 구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         android:usesCleartextTraffic="true">
         <activity
             android:name=".view.sign.screens.SignActivity"
-            android:windowSoftInputMode="stateAlwaysVisible" />
+            android:windowSoftInputMode="adjustResize" />
+
         <activity
             android:name=".SplashActivity"
             android:exported="true">
