--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     ext.kotlin_version = "1.5.30"
     ext.hilt_version = "2.40.5"
     ext.paging_version = "3.1.0"
+    ext.lottie_version = '3.7.0'
 
     repositories {
         google()
