[feat] 링크공유 키보드 자동올리기 구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,7 +54,8 @@
             android:name=".view.wish.item.screens.WishLinkSharingActivity"
             android:exported="true"
             android:screenOrientation="portrait"
-            android:theme="@style/AppThemePopup">
+            android:theme="@style/AppThemePopup"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
                 <category android:name="android.intent.category.DEFAULT" />
