--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,6 +103,9 @@ dependencies {
     // Lottie
     implementation "com.airbnb.android:lottie:$lottie_version"
 
+    // Calendar View
+    implementation 'joda-time:joda-time:2.10.14'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
