[delete] WebViewActivity에서 intent-filter 제거

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,12 +66,7 @@
 
         <activity
             android:name=".view.common.screens.WebViewActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="true"/>
 
         <provider
             android:name="androidx.core.content.FileProvider"
