[feat] 앱 이용방법 ui 구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,12 @@
                     android:path="/main" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".view.home.HowToUseActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"/>
+
         <activity
             android:name=".view.wish.item.screens.WishLinkSharingActivity"
             android:exported="true"
