--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.4.0'
     implementation 'android.arch.work:work-runtime:1.0.1'
     implementation 'androidx.work:work-runtime-ktx:2.7.0'
+    implementation 'io.coil-kt:coil:2.1.0'
 
     // jsoup
     implementation 'org.jsoup:jsoup:1.14.1'
@@ -107,6 +108,9 @@ dependencies {
 
     // Calendar View
     implementation 'joda-time:joda-time:2.10.14'
+
+    // Timber
+    implementation 'com.jakewharton.timber:timber:5.0.1'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
