--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,12 +30,15 @@ android {
         versionName "1.1.2"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        buildConfigField "String", "BASE_URL", properties["ec2.url"]
     }
 
     buildTypes {
+        debug {
+            buildConfigField "String", "BASE_URL", properties["DEV_BASE_URL"]
+        }
         release {
             minifyEnabled true
+            buildConfigField "String", "BASE_URL", properties["PROD_BASE_URL"]
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
