--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,8 @@ android {
     buildToolsVersion "30.0.3"
 
     compileOptions {
+        coreLibraryDesugaringEnabled true
+
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
@@ -30,6 +32,9 @@ android {
         versionName "1.2.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        vectorDrawables {
+            useSupportLibrary true
+        }
     }
 
     buildTypes {
@@ -54,6 +59,11 @@ android {
 
     composeOptions {
         kotlinCompilerExtensionVersion = "1.4.0-alpha01"
+    }
+    packagingOptions {
+        resources {
+            excludes += '/META-INF/{AL2.0,LGPL2.1}'
+        }
     }
 }
 
@@ -85,6 +95,7 @@ dependencies {
 
     // glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     kapt 'com.github.bumptech.glide:compiler:4.12.0'
 
     // Network
@@ -130,6 +141,9 @@ dependencies {
     androidTestImplementation composeBom
 
     implementation 'androidx.activity:activity-compose'
+    implementation 'androidx.compose.runtime:runtime-livedata'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose'
+
     implementation "androidx.compose.ui:ui"
     implementation "androidx.compose.ui:ui-tooling-preview"
     implementation 'androidx.compose.material3:material3:'
@@ -141,4 +155,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.3'
 }
