--- a/app/build.gradle
+++ b/app/build.gradle
@@ -146,7 +146,9 @@ dependencies {
 
     implementation "androidx.compose.ui:ui"
     implementation "androidx.compose.ui:ui-tooling-preview"
-    implementation 'androidx.compose.material3:material3:'
+    implementation 'androidx.compose.material3:material3'
+    implementation 'androidx.constraintlayout:constraintlayout-compose:1.0.1'
+    implementation 'io.coil-kt:coil-compose:2.4.0'
 
     androidTestImplementation "androidx.compose.ui:ui-test-junit4"
     debugImplementation "androidx.compose.ui:ui-tooling"
