[chore] 패키지 정리

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,7 +73,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".presentation.noti.screens.CalendarActivity"
+            android:name=".presentation.calendar.screen.CalendarActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
