--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,7 @@ android {
         applicationId "com.hyeeyoung.wishboard"
         minSdkVersion 24
         targetSdkVersion 33
-        versionCode 25
+        versionCode 27
         versionName "1.2.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -125,6 +125,10 @@ dependencies {
 
     // Timber
     implementation 'com.jakewharton.timber:timber:5.0.1'
+
+    // In App Update
+    implementation 'com.google.android.play:app-update:2.1.0'
+    implementation 'com.google.android.play:app-update-ktx:2.1.0'
 
     // Compose
     def composeBom = platform('androidx.compose:compose-bom:2023.05.01')
