--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,7 +92,7 @@ dependencies {
     implementation 'io.coil-kt:coil:2.1.0'
 
     // jsoup
-    implementation 'org.jsoup:jsoup:1.14.1'
+    implementation 'org.jsoup:jsoup:1.14.1' // TODO delete
 
     // Network
     implementation platform('com.squareup.okhttp3:okhttp-bom:4.10.0')
@@ -121,7 +121,7 @@ dependencies {
     implementation "com.airbnb.android:lottie:$lottie_version"
 
     // Calendar View
-    implementation 'joda-time:joda-time:2.10.14'
+    implementation 'joda-time:joda-time:2.10.14' // TODO delete
 
     // Timber
     implementation 'com.jakewharton.timber:timber:5.0.1'
@@ -139,15 +139,15 @@ dependencies {
     implementation 'androidx.compose.runtime:runtime-livedata'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose'
 
-    implementation "androidx.compose.ui:ui"
-    implementation "androidx.compose.ui:ui-tooling-preview"
+    implementation 'androidx.compose.ui:ui'
+    implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
     implementation 'androidx.constraintlayout:constraintlayout-compose:1.0.1'
     implementation 'io.coil-kt:coil-compose:2.4.0'
 
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4"
-    debugImplementation "androidx.compose.ui:ui-tooling"
-    debugImplementation "androidx.compose.ui:ui-test-manifest"
+    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
+    debugImplementation 'androidx.compose.ui:ui-tooling'
+    debugImplementation 'androidx.compose.ui:ui-test-manifest'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
