[feat] 앱 이용방법 다이얼로그 디자인 적용

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,7 +58,8 @@
         <activity
             android:name=".presentation.howtouse.screens.HowToUseActivity"
             android:exported="false"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:theme="@style/AppThemePopup" />
 
         <activity
             android:name=".presentation.wishitem.screens.WishLinkSharingActivity"
