--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,9 +10,6 @@ Properties properties = new Properties()
 properties.load(project.rootProject.file('local.properties').newDataInputStream())
 
 android {
-    compileSdkVersion 33
-    buildToolsVersion "30.0.3"
-
     compileOptions {
         coreLibraryDesugaringEnabled true
 
@@ -27,9 +24,10 @@ android {
     defaultConfig {
         applicationId "com.hyeeyoung.wishboard"
         minSdkVersion 24
-        targetSdkVersion 33
+        targetSdkVersion 34
         versionCode 38
         versionName "1.2.5"
+        compileSdk 34
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
